# plot

./: .gitignore  CHANGES  LICENSE  README  README.md  THANKS  TODO  plot.cabal
examples/: Test.hs  Test2.hs  Test3.hs  Test4.hs  perturbed-sine.hs
lib/: Test.hs
lib/Control/Monad/: Supply.hs
lib/Graphics/Rendering/: Plot.hs
lib/Graphics/Rendering/Plot/: Defaults.hs  Figure.hs  Render.hs  Types.hs
lib/Graphics/Rendering/Plot/Figure/: Bar.hs  Line.hs  Plot.hs  Point.hs  Simple.hs  Text.hs
lib/Graphics/Rendering/Plot/Figure/Plot/: Annotation.hs  Axis.hs  Data.hs  Legend.hs
lib/Graphics/Rendering/Plot/Render/: Plot.hs  Text.hs  Types.hs
lib/Graphics/Rendering/Plot/Render/Plot/: Annotation.hs  Axis.hs  Data.hs  Format.hs  Glyph.hs  Legend.hs
