Name:                plot
Version:             0.2.3.10
License:             BSD3
License-file:        LICENSE
Copyright:           (c) A.V.H. McPhail 2010, 2012-2017, 2019
Author:              Vivian McPhail
Maintainer:          haskell.vivian.mcphail <at> gmail <dot> com
Stability:           experimental
Homepage:            http://github.com/amcphail/plot
Synopsis:            A plotting library, exportable as eps/pdf/svg/png or renderable with gtk
Description:         
     A package for creating plots, built on top of the Cairo rendering engine.  
     .
     An ambitious attempt to replace gnuplot.
     .
     Monadic actions are used to configure a figure, which is a (rxc) array of subplots.
     Each plot displays a graph with optional heading, labels, legend, and annotations.
     The annotations themselves may be used to draw diagrams.
     .
     A figure is preprocessed in preparation for rendering by the Cairo renderer.
     The Cairo library can be used to output the figure to PS, PDF, SVG, and PNG file formats,
     or to display the figure in a GTK Drawable context.  (see package 'plot-gtk').
     .
     The preprocessed figure can be embedded as an arbitrary Cairo render, including in a diagram
     created with the diagram package.  Conversely, arbitrary Cairo renders can be embedded in
     the data region of a 'Figure'.
     .
     The data series are type "Data.Packed.Vector" from hmatrix, which, when hmatrix
     is compiled with '-fvector', is a synonym for "Data.Vector.Storable" from the
     vector package and are thus compatible with packages such as statistics.
     .
     The example in Graphics.Rendering.Plot can be viewed at 
     <http://code.haskell.org/plot/examples/perturbed-sine.png>
     .
     .
Category:            Graphics

Tested-with:         GHC==8.2.2
Cabal-version:       >= 1.8
Build-type:          Simple

Extra-source-files:  README, CHANGES, LICENSE, THANKS
                     examples/perturbed-sine.hs,
                     examples/perturbed-sine.png,
                     examples/Test.hs,
                     examples/Test2.hs,
                     examples/Test3.hs

library

  Build-Depends:     base >= 4 && < 6,
                     mtl > 2, array,
                     transformers > 0.5 && < 0.7,
                     pango >= 0.13 && < 0.14, cairo >= 0.13 && < 0.14,
                     colour >= 2.2.1 && < 2.4,
                     hmatrix >= 0.17

  Extensions:        MultiParamTypeClasses
                     GeneralizedNewtypeDeriving
                     TypeSynonymInstances
                     FlexibleInstances
                     FlexibleContexts
                     UndecidableInstances

  hs-source-dirs:    lib
  Exposed-Modules:   Graphics.Rendering.Plot
                     Graphics.Rendering.Plot.Figure
                     Graphics.Rendering.Plot.Figure.Simple
                     Graphics.Rendering.Plot.Render

  Other-modules:     Graphics.Rendering.Plot.Types
                     Graphics.Rendering.Plot.Defaults
                     Graphics.Rendering.Plot.Figure.Line
                     Graphics.Rendering.Plot.Figure.Point
                     Graphics.Rendering.Plot.Figure.Bar
                     Graphics.Rendering.Plot.Figure.Text
                     Graphics.Rendering.Plot.Figure.Plot
                     Graphics.Rendering.Plot.Figure.Plot.Axis
                     Graphics.Rendering.Plot.Figure.Plot.Data
                     Graphics.Rendering.Plot.Figure.Plot.Legend
                     Graphics.Rendering.Plot.Figure.Plot.Annotation
                     Graphics.Rendering.Plot.Render.Types
                     Graphics.Rendering.Plot.Render.Text
                     Graphics.Rendering.Plot.Render.Plot
                     Graphics.Rendering.Plot.Render.Plot.Axis
                     Graphics.Rendering.Plot.Render.Plot.Data
                     Graphics.Rendering.Plot.Render.Plot.Legend
                     Graphics.Rendering.Plot.Render.Plot.Annotation
                     Graphics.Rendering.Plot.Render.Plot.Glyph
                     Graphics.Rendering.Plot.Render.Plot.Format
                     Control.Monad.Supply

  ghc-options:       -Wall -fno-warn-unused-binds
                     -O2

  ghc-prof-options:  -auto

source-repository head
  type:     git
  location: https://github.com/amcphail/plot
